2010-04-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/gsa-style.css, src/html/src/omp.xsl,
	src/html/src/gsad.xsl, src/html/src/oap.xsl,
	src/html/src/IE6fixes.css, src/html/src/help.xsl: Made
	older Konqueror work again. Thanks to Hartmut Goebel
	for this proposed fix.

2010-04-23  Hartmut Goebel <h.goebel@goebel-consult.de>

	* src/html/src/gsad.xsl, src/html/src/help.xsl
	src/html/src/omp.xsl, src/html/src/oap.xsl,
	src/html/src/gsa-style.css, src/html/src/login/login.html ,
	src/CMakeLists.txt: Fixed: IE6 did not display some content
	elements at all and table headers were visually cluttered.

	* src/html/src/IE6fixes.css: New stylesheet (onyl used by IE6).

2010-04-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/gsad_omp.c (create_task_omp): Fixed syntax for schedule element
	when creating a new task.

2010-04-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/html/src/gsad.xsl, src/html/src/help.xsl: Add default duration
	for links to the performance monitor.

2010-04-15  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Updated version number.

	* src/html/src/help.xsl: Updated version number.

2010-04-15  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 1.0.0-beta6 release.

	* src/html/src/help.xsl: Updated version number.

	* CHANGES: Updated.

	* CMakeLists.txt: Added autogenerated files to
	CPACK_SOURCE_IGNORE_FILES.

	* doc/.built-html: Removed superfluous file.

2010-04-15  Michael Wiegand <michael.wiegand@intevation.de>

	* src/html/src/help.xsl: Corrected the maximum comment length.
	(glossary.html): Added entry for schedule to glossary.
	(new_task.html): Added missing help for comment field, added help for
	schedule field.
	(reports.html): Updated help for report summary.

2010-04-14  Michael Wiegand <michael.wiegand@intevation.de>

	* src/html/src/help.xsl (tasks.html): Updated help for tasks list with
	new features and elements.
